--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./assets/css/mobile.css">
     <link rel="stylesheet" href="./assets/css/desktop.css">
     <link rel="stylesheet" href="./assets/css/theme.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/thinline.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 <body>
 
@@ -16,13 +18,14 @@
 
         <nav class="navbar"><!----navigation- container-->
 
+
+            <div class="menu"><!------menu-->
+                <span><i class="uil uil-list-ul"></i></span>
+            </div><!----menu end-->
+
             <div class="logo"><!----Logo-->
                 <h4>Kevin Brian</h4>
             </div><!-------Logo End-->
-
-            <div class="menu"><!------menu-->
-
-            </div><!----menu end-->
 
         </nav><!----navigation- container end-->
 
@@ -46,10 +49,10 @@
 
                 <div class="ProfileSocialMedia"><!-----ProfileSocialMedia icons-->
 
-                    <span><i>FB</i></span>
-                    <span><i>LIn</i></span>
-                    <span><i>GH</i></span>
-                    <span><i>Stack</i></span>
+                    <span><i class="uil uil-linkedin"></i></span>
+                    <span><i class="uil uil-github"></i></span>
+                    <span><i class="uil uil-twitter"></i></span>
+                    <span><i class="uil uil-instagram"></i></span>
 
                 </div><!-----ProfileSocialMedia end-->
 
