adding typewriter feature

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             </div><!---social media links end-->
 
             <div class="profileCard__desc--intro">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae maxime 
+                <p id="typeWriter">
+                   
                 </p>
             </div>
         </div><!----profile image end-->
