--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 
             <div class="profileCard__desc--intro">
                 <p id="typeWriter">
-                   
                 </p>
             </div>
         </div><!----profile image end-->
@@ -72,18 +71,17 @@
         -->
         <div class="card card__heroText"><!----card about me-->
                 <p class="card__text">
-                    Lorem ipsum dolor it amet consectetur adipisicing elit. Nesciunt, ad?
+                    Let's build your next Project 
                 </p>
                 <button class="card__button button">
                     <a href="#" class="button__link">Get in Touch</a>
                 </button>
         </div><!--about me end-->
 
-
-        <div class="card card__aboutMe" data-aos="fade-right"><!-----card about me-->
+        <div class="card card__aboutMe" data-aos="zoom-in-out"><!-----card about me-->
 
             <div class="card__title">
-                <h5>Title</h5>
+                <h5>About me</h5>
             </div>
 
             <div class="card__text">
@@ -94,11 +92,31 @@
 
         </div><!-----card end about me-->
 
+        <div class="card card__skills" data-aos="zoom-in-out"><!-----skills-->
+
+            <div class="card__title">
+                <h5>Skills</h5>
+            </div>
+
+            <div class="card__text">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita veritatis vel earum recusandae magni quae quaerat nobis consequuntur minima id.
+                </p>
+            </div>
+
+            <div class="card__text">
+                <p>
+                    <img src="./assets/images/skills.svg" alt="">
+                </p>
+            </div>
+
+        </div><!-----skills end-->
+
         <h4 class="section_title">Projects</h4>
 
         <section class="project"><!---projects section end-->
 
-            <div class="projectCard" data-aos="fade-left">
+            <div class="projectCard" data-aos="zoom-in">
 
                 <div class="projectCard__img">
                     <img src="/assets/images/projects/image1.jpg" alt="">
@@ -121,7 +139,7 @@
 
             </div>
 
-            <div class="projectCard" data-aos="fade-right">
+            <div class="projectCard" data-aos="zoom-in">
 
                 <div class="projectCard__img">
                     <img src="/assets/images/projects/image2.jpg" alt="">
@@ -144,7 +162,7 @@
 
             </div>
 
-            <div class="projectCard" data-aos="fade-left">
+            <div class="projectCard" data-aos="zoom-in">
 
                 <div class="projectCard__img">
                     <img src="/assets/images/projects/image4.jpg" alt="">
