--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="logo">
-            <h5>Kevin Brian</h5>
+            <h5>Kevin Brian Portolio</h5>
         </div>
 
     </navigation>
