--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kevin Brian Personal Portfolio</title>
+    <title>Kevin Brian | Personal Portfolio</title>
     <link rel="stylesheet" href="/assets/styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="node_modules/@icon/unicons/unicons.css">
@@ -27,14 +27,14 @@
                 <li class="nav__items active"><a href="index.html">Home</a></li>
                 <li class="nav__items"><a href="#aboutMe">About me</a></li>
                 <li class="nav__items"><a href="#projects">Projects</a></li>
-                <li class="nav__items"><a href="#">Services</a></li>
-                <li class="nav__items"><a href="#">Blog</a></li>
-                <li class="nav__items"><a href="#">Contact us</a></li>
+                <!-- <li class="nav__items"><a href="#">Services</a></li> -->
+                <li class="nav__items"><a href="https://realkevinbrian.hashnode.dev">Blog</a></li>
+                <li class="nav__items"><a href="#contactMe">Contact us</a></li>
             </ul>
         </div>
 
         <div class="logo">
-            <h5>Kevin Brian Portolio</h5>
+            <h5>CoderX</h5>
         </div>
 
     </navigation>
@@ -365,7 +365,7 @@
 
             <li class="fixedmenu__items">
                 <span>
-                    <a href="#contactMe">
+                    <a href="https://realkevinbrian.hashnode.dev">
                         <i class='bx bxl-medium' ></i>
                     </a>
                 </span>
