UI interface Updating

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <profileImage>
             
-                    <img src="./assets/images/sit.svg" alt="profile Image">
+                    <img src="./assets/images/bgCoding.gif" alt="profile Image">
                 
             </profileImage>
 
@@ -160,27 +160,27 @@
             <Projectcard class="card" data-aos="slide-up">
 
                 <div class="card__img">
-                    <img src="./assets/images/projects/image2.jpg" alt="project Image">
+                    <img src="https://i.ibb.co/ryVtzvt/project2.png" alt="project Image">
                 </div>
 
                 <div class="card__title">
-                    <h4>Project Name</h4>
+                    <h4>Mozadvertisers Website</h4>
                 </div>
 
                 <div class="card__desc">
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum provident temporibus perspiciatis voluptatibus expedita sapiente?
+                        Mozadvertisers website, I developed this website for a Digital marketing agency, to showcase their services, and provide information about their agency
                     </p>
                 </div>
 
                 <div class="card__button">
 
                     <button>
-                        <a href="#">Visit Website</a>
+                        <a href="https://mozad.netlify.app">Visit Website</a>
                     </button>
 
                     <button>
-                        <a href="#">Github</a>
+                        <a href="https://github.com/realkevinbrian/Mozadvertisers">Github</a>
                     </button>
 
                 </div>
@@ -190,27 +190,27 @@
             <Projectcard class="card" data-aos="slide-up">
 
                 <div class="card__img">
-                    <img src="./assets/images/projects/image2.jpg" alt="project Image">
+                    <img src="https://i.ibb.co/pb5kTVJ/project5.png" alt="project Image">
                 </div>
 
                 <div class="card__title">
-                    <h4>Project Name</h4>
+                    <h4>JK Electrotecnic Website</h4>
                 </div>
 
                 <div class="card__desc">
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum provident temporibus perspiciatis voluptatibus expedita sapiente?
+                        JK electrotecnic website, with the purpose of showing the companies services and products and provide useful information using my creativity.
                     </p>
                 </div>
 
                 <div class="card__button">
 
                     <button>
-                        <a href="#">Visit Website</a>
+                        <a href="https://jkelectrotecnic.netlify.app">Visit Website</a>
                     </button>
 
                     <button>
-                        <a href="#">Github</a>
+                        <a href="https://github.com/realkevinbrian/jkelectrotecnic">Github</a>
                     </button>
 
                 </div>
