--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <link rel="stylesheet" href="/styles/style.css">
     <!-- cdn links -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.0.2/aos.css" integrity="sha512-ksbpl5EUb4HLEKUNItsPMT/Ih6KcISE53GbYOu3xFUVYvTSSX5AJxTI2aigdQm9uNSkSsRMHsSGNKppkt691lw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./node_modules/aos/dist/aos.css">
-    <link rel="stylesheet" href="node_modules/boxicons/css/boxicons.css">
+    <!-- <link rel="stylesheet" href="node_modules/aos/dist/aos.css"> -->
+    <!-- <link rel="stylesheet" href="node_modules/boxicons/css/boxicons.css"> -->
 </head>
 <body>
 
@@ -75,11 +74,9 @@
                                 <i class='bx bxl-twitter' ></i>
                             </a>
                         </span>
-
                         </div>
                     </socialmedia>
-                    <intro id="typeWrite">
-                        
+                    <intro id="auto_write">
                     </intro>
                 </desc>
 
