fixing lib errors

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <!-- styles link -->
     <link rel="stylesheet" href="/styles/style.css">
     <!-- cdn links -->
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.0.2/aos.css" integrity="sha512-ksbpl5EUb4HLEKUNItsPMT/Ih6KcISE53GbYOu3xFUVYvTSSX5AJxTI2aigdQm9uNSkSsRMHsSGNKppkt691lw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- <link rel="stylesheet" href="node_modules/aos/dist/aos.css"> -->
-    <!-- <link rel="stylesheet" href="node_modules/boxicons/css/boxicons.css"> -->
+    <!-- <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'> -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.0.2/aos.css" integrity="sha512-ksbpl5EUb4HLEKUNItsPMT/Ih6KcISE53GbYOu3xFUVYvTSSX5AJxTI2aigdQm9uNSkSsRMHsSGNKppkt691lw==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+    <link rel="stylesheet" href="node_modules/aos/dist/aos.css">
+    <link rel="stylesheet" href="node_modules/boxicons/css/boxicons.css">
 </head>
 <body>
 
@@ -376,15 +376,14 @@
     </div>
 </footer>
 
-<script src="./node_modules/aos/dist/aos.js"></script>
-<script src="./assets/script/App.js">
-</script>
+<script src="node_modules/aos/dist/aos.js"></script>
+<script src="assets/script/App.js"></script>
 <script>
     AOS.init({
       offset: 200,
       duration: 600,
       easing: 'ease-in-sine',
-      delay: 100,
+      delay: 120
     });
   </script> 
 </body>
