--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,9 @@
     <!-- <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.0.2/aos.css"/> -->
     <link rel="stylesheet" href="node_modules/aos/dist/aos.css">
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <link rel="stylesheet" href="node_modules/boxicons/css/boxicons.css">
+    <script src="node_modules/aos/dist/aos.js"></script>
 </head>
 <body>
 
