--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.0.2/aos.css"/> -->
      <link rel="stylesheet" href="node_modules/aos/dist/aos.css">
      <link rel="stylesheet" href="node_modules/boxicons/css/boxicons.css">
+     <script src="node_modules/aos/dist/aos.js"></script>
 </head>
 <body>
 
