--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- styles link -->
     <link rel="stylesheet" href="/styles/style.css">
     <!-- cdn links -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="node_modules/aos/dist/aos.css" />
     <script src="node_modules/aos/dist/aos.js"></script>
