--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <profileImage>
             
-                    <img src="./assets/images/bgCoding.gif" alt="profile Image" id="bg_image">
+                    <img src="./assets/images/programming.gif" alt="profile Image" id="bg_image">
                 
             </profileImage>
 
